--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
   <head>
     <title>Blackjack</title>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
     <link href="styles/app.css" rel="stylesheet" type="text/css" media="screen">
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <h1>Simple BlackJack</h1>
+      <h3>Built with Backbone and CoffeeScript</h3>
+    </nav>
+    <div class="container">
+    </div>
+
     <script src="lib/jquery.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="lib/backbone.js"></script>
